# isthmus-ablation-core

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  mkdocs.yml
docs/: architecture_flowchart.tex  getting-started.md  index.md
docs/commands/: fix-voxel-ablate.md  grid-write-vtu.md  iac.md  include.md  index.md  isthmus-surface.md  language.md  loops.md  run.md  source.md  stats.md  surface.md  timestep.md  verify.md  voxel-ablate.md  voxel-dump.md  voxel.md
docs/concepts/: architecture.md  expected-features.md  verification.md
docs/development/: build-and-link.md  code-architecture.md  directory-layout.md  documentation.md  test-reports.md  testing.md
docs/examples/: dsmc-sphere-kinetic.md  dsmc-sphere-mass-flux.md  pregen-tiff-carbon-recession.md  slab-direct.md  slab-isthmus.md  slab-local.md  sphere-isthmus.md  tiff-carbon-sample.md  tiff-sphere.md
dsmc-bridge/: iac.cpp  iac.h  iacbridge.cpp  iacbridge.h  iacgrid.cpp  iacgrid.h  isthmus.cpp  isthmus.h  source.cpp  source.h  surface.cpp  surface.h  voxel.cpp  voxel.h
editors/: README.md
editors/emacs/: iac-input-mode.el
editors/vscode/iac-input/: language-configuration.json  package.json
editors/vscode/iac-input/syntaxes/: iac-input.tmLanguage.json
examples/dsmc-boundary-mass-flux/: in.converge-boundary
examples/dsmc-slab-time-stop/: in.dsmc-slab-time-stop
examples/dsmc-sphere-flux/: in.measure-reaction-flux
examples/dsmc-sphere-kinetic/: air-react-to-flux.species  in.dsmc-sphere-kinetic
examples/dsmc-sphere-mass-flux/: air-react-to-flux.vss  in.ablation-step  in.converge-ablation-loop  in.converge-command  in.converge-measure  in.explicit-loop  in.measure-mass-flux
examples/dsmc-sphere-reset-reservoir/: README.md  in.dsmc-sphere-reset-reservoir
examples/dsmc-sphere-visual/: air.species  in.dsmc-sphere-visual
examples/hackathon-benchmark/: README.md  in.sphere
examples/mcc-carbon-array-sweep/: .gitignore  README.md  carbon-co.surf  clean-output.sh  gather-results.sbatch  gather-results.sh  generate-cuts.sh  in.dsmc-co-converge-sweep  run-row.sbatch  submit-mcc-sweep.sh  sweep.csv
examples/multiphase-core-shell-sphere/: in.multiphase-core-shell-sphere
examples/multiphase-side-by-side-slabs/: in.multiphase-side-by-side-slabs
examples/pregen-tiff-carbon-recession/: air-react-to-flux.species  clean-output.sh  generate-sample.sh  in.constant-flux  in.dsmc-co  in.dsmc-co-converge
examples/slab-direct-ablation/: in.slab-direct-ablation  in.slab-direct-yhi
examples/slab-isthmus-ablation/: in.slab-isthmus-finite  in.slab-isthmus-ghost
examples/slab-local-ablation/: in.slab-local-ablation
examples/sphere-isthmus-ablation/: in.sphere-isthmus-ablation  in.sphere-isthmus-kinetic  in.sphere-isthmus-local  in.sphere-isthmus-normal
examples/tiff-carbon-sample/: air.vss  carbon-sample-top-crop.tif  in.tiff-carbon-sample-constant  in.tiff-carbon-sample-dsmc-co
examples/tiff-sphere/: in.tiff-sphere-normal  sphere-24.tif
include/isthmus_ablation/: expression.hpp  model.hpp  parser.hpp  types.hpp
src/: dsmc_iac_launcher.cpp  expression.cpp  main.cpp  model.cpp  parser.cpp
tests/: README.md  report-cases.csv
tests/cmake/: expect-dsmc-failure.cmake  run-dsmc-mpi-isthmus-restart.cmake  run-dsmc-sphere-kinetic-convergence.cmake  run-pregen-tiff-carbon-converge.cmake  run-sphere-voxel-lattice.cmake  skip-test.cmake
tests/inputs/dsmc-slab-direct-ablation/: in.dsmc-slab-direct-ablation.verify
tests/inputs/dsmc-slab-time-stop/: in.dsmc-slab-time-stop.verify
tests/inputs/dsmc-sphere-flux/: in.dsmc-sphere-flux.verify
tests/inputs/dsmc-sphere-isthmus-ablation/: in.dsmc-sphere-isthmus-normal-carryover.verify
tests/inputs/dsmc-sphere-kinetic-convergence/: in.dsmc-sphere-kinetic-convergence.in
tests/inputs/dsmc-sphere-mass-flux/: in.dsmc-converge-ablation-loop.verify  in.dsmc-converge-boundary.verify  in.dsmc-converge-zero-flux.verify  in.dsmc-converge.verify  in.dsmc-mass-flux-ablation.verify  in.dsmc-mass-flux-explicit.verify  in.dsmc-stale-ave-surf.verify
tests/inputs/dsmc-tiff-carbon-co/: in.dsmc-tiff-carbon-co.verify.in
tests/inputs/multiphase-core-shell-sphere/: in.multiphase-core-shell-sphere.verify
tests/inputs/multiphase-side-by-side-slabs/: in.multiphase-side-by-side-slabs-tiff.verify.in  in.multiphase-side-by-side-slabs.verify
tests/inputs/pregen-tiff-carbon-recession/: in.constant-flux.verify.in  in.dsmc-co-converge.verify.in  in.dsmc-co.verify.in
tests/inputs/slab-direct-ablation/: in.slab-direct-command.verify  in.slab-direct-fix.verify  in.slab-direct-yhi.verify
tests/inputs/slab-isthmus-ablation/: in.slab-isthmus-finite-surface.verify  in.slab-isthmus-ghost-wall.verify
tests/inputs/slab-local-ablation/: in.slab-local-ablation.fix-verify  in.slab-local-ablation.verify
tests/inputs/sphere-isthmus-ablation/: in.sphere-isthmus-ablation.verify  in.sphere-isthmus-kinetic-theory-courant.verify  in.sphere-isthmus-kinetic-theory.verify  in.sphere-isthmus-local-deletion.verify  in.sphere-isthmus-normal-carryover-convergence.verify  in.sphere-isthmus-normal-carryover.verify  in.sphere-isthmus-normal-convergence.verify  in.sphere-isthmus-normal.verify  in.sphere-isthmus-surface-resolution-convergence.verify
tests/inputs/sphere-voxel-lattice/: in.sphere-voxel-lattice.verify.in
tests/inputs/tiff-axis/: in.tiff-center-origin.verify.in  in.tiff-default-axes.verify.in  in.tiff-legacy-axes.verify.in
tests/inputs/tiff-carbon-sample/: in.tiff-carbon-sample-constant.verify.in
tests/inputs/tiff-sphere/: in.tiff-sphere-normal-carryover.verify
tests/tools/: dsmc-kinetic-convergence-check.cpp  sphere-voxel-lattice-check.cpp
tools/: build-docs-pdf.py  build-test-report.py  check-dsmc-kinetic.py  convert-dsmc-visual.py  create-dsmc-overlay.py  create-dsmc-wrapper.py  create_dsmc_overlay.cpp  make-carbon-sample-tiff.py  make-multiphase-slab-tiff.py  make-tiff-sphere.py  run-dsmc-kinetic-convergence.py  run-test-report.py
